syntax = "proto3";

package api.proto.v1.rpc.user;

option go_package = "github.com/apetsko/gophkeeper/protogen/api/proto/v1/rpc/user";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}
