syntax = "proto3";

package api.proto.v1.rpc.user;

option go_package = "github.com/apetsko/gophkeeper/protogen/api/proto/v1/rpc/user";

message SignupRequest {
  string username = 1;
  string password = 2;
}

message SignupResponse {
  int32 id = 1;
  string username = 2;
  string token = 3;
}